# BookStore

./: Cargo.toml
docs/: sea_migrate.md
src/: main.rs
src/auth/: mod.rs
src/controllers/: auth.rs  authors.rs  books.rs  mod.rs
src/db/: mod.rs
src/entities/: author.rs
src/fairings/: cors.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20240704_155437_create_author_table.rs  m20240704_160757_create_book_table.rs  mod.rs
